# ChangeLog for dev-python/gst-python
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gst-python/ChangeLog,v 1.38 2008/05/29 16:14:52 hawking Exp $

  29 May 2008; Ali Polatel <hawking@gentoo.org> gst-python-0.10.9.ebuild,
  gst-python-0.10.10.ebuild:
  python_mod_optimize is ROOT aware.

  24 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org>
  gst-python-0.10.10.ebuild:
  fix python eclass use, bug #207667
  add examples USE flag, bug #111508

*gst-python-0.10.10 (29 Jan 2008)

  29 Jan 2008; Samuli Suominen <drac@gentoo.org> +gst-python-0.10.10.ebuild:
  Version bump.

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  gst-python-0.10.9.ebuild:
  ppc stable, bug #202174

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  gst-python-0.10.9.ebuild:
  x86 stable

  13 Dec 2007; Samuli Suominen <drac@gentoo.org> gst-python-0.10.9.ebuild:
  amd64 stable

  30 Nov 2007; Samuli Suominen <drac@gentoo.org> gst-python-0.10.9.ebuild:
  Remove xmlto dep. since it's not used.

*gst-python-0.10.9 (28 Nov 2007)

  28 Nov 2007; Samuli Suominen <drac@gentoo.org>
  +files/gst-python-0.10.9-lazy.patch, +gst-python-0.10.9.ebuild:
  Version bump, applying a -Wl,-z,lazy patch wrt #166221.

  24 Nov 2007; Samuli Suominen <drac@gentoo.org>
  gst-python-0.10.8-r1.ebuild:
  This version is known to fail with current pygobject, upstream has been
  informed and while waiting for next release restrict test suite.

*gst-python-0.10.8-r1 (04 Nov 2007)

  04 Nov 2007; Samuli Suominen <drac@gentoo.org>
  +files/gst-python-0.10.8-atexit.patch, +gst-python-0.10.8-r1.ebuild:
  Patch from upstream CVS, fixing Segmentation Fault with media-sound/exaile.
  gst/gstmodule.c (DL_EXPORT): Remove the atexit(gst_deinit) Atexit handlers
  are run after python has finalized (see Py_Exit in pythonrun.c), but
  gst_deinit can potentially call back into python e.g. for python-defined
  plugins.
